[gd_scene load_steps=3 format=3 uid="uid://djb310dgsan7m"]

[ext_resource type="Script" path="res://Scripts/UI/Debug_Manager.gd" id="1_bwhsq"]
[ext_resource type="Script" path="res://Scripts/UI/SaveSystem.gd" id="2_ep1vw"]

[node name="UI" type="CanvasLayer"]
process_mode = 3

[node name="Menu" type="Node" parent="."]
script = ExtResource("1_bwhsq")

[node name="MenuContainer" type="VBoxContainer" parent="."]
light_mask = 2
visibility_layer = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -68.0
offset_right = 90.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackToGame" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Back to game"

[node name="Restart" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Restart"

[node name="FullScreen" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Turn on/off full screen"

[node name="Quit" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="save_system" type="Node" parent="."]
script = ExtResource("2_ep1vw")

[connection signal="pressed" from="MenuContainer/BackToGame" to="Menu" method="_on_back_to_game_pressed"]
[connection signal="pressed" from="MenuContainer/Restart" to="Menu" method="_on_restart_pressed"]
[connection signal="pressed" from="MenuContainer/FullScreen" to="Menu" method="_on_full_screen_pressed"]
[connection signal="pressed" from="MenuContainer/Quit" to="Menu" method="_on_quit_pressed"]
